Update dependicies (#8)
* Update Grails to latest 4.1, DOC4J, Liquidbase, and POI to latest supported libraries

* Upgrade to grails 5.2.5

* Upgrade to grails 5.2.5

Co-authored-by: Aaron <aa@unkown.com>