@@ -1,93 +1,24 @@
 buildscript {
     repositories {
+        maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://repo.grails.org/grails/core" }
     }
     dependencies {
-        classpath "org.grails:grails-gradle-plugin:$grailsVersion"
-        classpath "org.grails.plugins:views-gradle:2.0.4"
-        classpath "org.grails.plugins:hibernate5:7.0.0"
-        classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.0"
-        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.0.10"
-        classpath 'org.glassfish.jaxb:jaxb-runtime:2.3.1'
-        classpath 'org.grails.plugins:database-migration:3.1.0'
+        classpath "org.grails:grails-gradle-plugin:$grailsGradlePluginVersion"
+        classpath "gradle.plugin.com.github.erdi.webdriver-binaries:webdriver-binaries-gradle-plugin:2.6"
+        classpath "org.grails.plugins:hibernate5:7.3.0"
+        classpath "org.grails.plugins:views-gradle:2.3.2"
+        classpath "com.bertramlabs.plugins:asset-pipeline-gradle:3.4.7"
+        classpath 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
+        classpath 'org.grails.plugins:database-migration:4.1.0'
+        classpath 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
     }
 }
 
-def jvmOpenModulesArgs = [
-        "--add-opens=java.management/com.sun.jmx.mbeanserver=ALL-UNNAMED",
-        "--add-opens=java.base/java.io=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.annotation=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.invoke=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.module=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.ref=ALL-UNNAMED",
-        "--add-opens=java.base/java.lang.reflect=ALL-UNNAMED",
-        "--add-opens=java.base/java.math=ALL-UNNAMED",
-        "--add-opens=java.base/java.net=ALL-UNNAMED",
-        "--add-opens=java.base/java.net.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.channels=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.channels.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.charset=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.charset.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.file=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.file.attribute=ALL-UNNAMED",
-        "--add-opens=java.base/java.nio.file.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.security=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.acl=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.cert=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.interfaces=ALL-UNNAMED",
-        "--add-opens=java.base/java.security.spec=ALL-UNNAMED",
-        "--add-opens=java.base/java.text=ALL-UNNAMED",
-        "--add-opens=java.base/java.text.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.time=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.chrono=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.format=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.temporal=ALL-UNNAMED",
-        "--add-opens=java.base/java.time.zone=ALL-UNNAMED",
-        "--add-opens=java.base/java.util=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent.atomic=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.concurrent.locks=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.function=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.jar=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.regex=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.spi=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.stream=ALL-UNNAMED",
-        "--add-opens=java.base/java.util.zip=ALL-UNNAMED",
-        "--add-opens=java.datatransfer/java.awt.datatransfer=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.applet=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.color=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.desktop=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.dnd=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.dnd.peer=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.event=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.font=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.geom=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.im=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.im.spi=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.image=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.image.renderable=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.peer=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.awt.print=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.beans=ALL-UNNAMED",
-        "--add-opens=java.desktop/java.beans.beancontext=ALL-UNNAMED",
-        "--add-opens=java.instrument/java.lang.instrument=ALL-UNNAMED",
-        "--add-opens=java.logging/java.util.logging=ALL-UNNAMED",
-        "--add-opens=java.management/java.lang.management=ALL-UNNAMED",
-        "--add-opens=java.prefs/java.util.prefs=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.activation=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.dgc=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.registry=ALL-UNNAMED",
-        "--add-opens=java.rmi/java.rmi.server=ALL-UNNAMED",
-        "--add-opens=java.sql/java.sql=ALL-UNNAMED"
-]
-
-version "0.27"
+version "0.28"
 group "goals"
 
+apply plugin:"groovy"
 apply plugin:"eclipse"
 apply plugin:"idea"
 apply plugin:"war"
@@ -98,7 +29,18 @@ apply plugin:"org.grails.grails-gsp"
 apply plugin:"com.bertramlabs.asset-pipeline"
 
 repositories {
+    mavenCentral()
     maven { url "https://repo.grails.org/grails/core" }
+    mavenLocal()
+
+}
+
+sourceSets {
+    main {
+        resources {
+            srcDir 'grails-app/migrations'
+        }
+    }
 }
 
 configurations {
@@ -110,117 +52,140 @@ configurations {
 
 dependencies {
     developmentOnly("org.springframework.boot:spring-boot-devtools")
-    compile "org.springframework.boot:spring-boot-starter-logging"
-    compile "org.springframework.boot:spring-boot-autoconfigure"
-    compile "org.grails:grails-core"
-    compile "org.springframework.boot:spring-boot-starter-actuator"
-    compile "org.springframework.boot:spring-boot-starter-tomcat"
-    compile "org.grails:grails-web-boot"
-    compile "org.grails:grails-logging"
-    compile "org.grails:grails-plugin-rest"
-    compile "org.grails:grails-plugin-databinding"
-    compile "org.grails:grails-plugin-i18n"
-    compile "org.grails:grails-plugin-services"
-    compile "org.grails:grails-plugin-url-mappings"
-    compile "org.grails:grails-plugin-interceptors"
-    compile "org.grails.plugins:cache"
-    compile "org.grails.plugins:async"
-    compile "org.grails.plugins:scaffolding"
-    compile "org.grails.plugins:views-json"
-    compile "org.grails.plugins:views-json-templates"
-    compile "org.grails.plugins:events"
-    compile "org.grails.plugins:hibernate5"
-    compile "org.hibernate:hibernate-core:5.4.0.Final"
-    compile "org.grails.plugins:gsp"
     compileOnly "io.micronaut:micronaut-inject-groovy"
     console "org.grails:grails-console"
+    implementation "org.springframework.boot:spring-boot-starter-logging"
+    implementation "org.springframework.boot:spring-boot-starter-validation"
+    implementation "org.springframework.boot:spring-boot-autoconfigure"
+    implementation "org.grails:grails-core"
+    implementation "org.springframework.boot:spring-boot-starter-actuator"
+    implementation "org.springframework.boot:spring-boot-starter-tomcat"
+    implementation "org.grails:grails-web-boot"
+    implementation "org.grails:grails-logging"
+    implementation "org.grails:grails-plugin-rest"
+    implementation "org.grails:grails-plugin-databinding"
+    implementation "org.grails:grails-plugin-i18n"
+    implementation "org.grails:grails-plugin-services"
+    implementation "org.grails:grails-plugin-url-mappings"
+    implementation "org.grails:grails-plugin-interceptors"
+    implementation "org.grails.plugins:cache"
+    implementation "org.grails.plugins:async"
+    implementation "org.grails.plugins:scaffolding"
+    implementation "org.grails.plugins:hibernate5"
+    implementation "org.hibernate:hibernate-core:5.6.11.Final"
+    implementation "org.grails.plugins:events"
+    implementation "org.grails.plugins:views-json"
+    implementation "org.grails.plugins:views-json-templates"
+    implementation "org.grails.plugins:gsp"
     profile "org.grails.profiles:web"
-    runtime "org.glassfish.web:el-impl:2.1.2-b03"
-    runtime "com.h2database:h2"
-    runtime "org.apache.tomcat:tomcat-jdbc"
-    runtime "javax.xml.bind:jaxb-api:2.3.1"
-    runtime "com.bertramlabs.plugins:asset-pipeline-grails:3.0.10"
-    testCompile "org.grails:grails-gorm-testing-support"
-    testCompile "org.mockito:mockito-core"
-    testCompile "org.grails:grails-web-testing-support"
-    testCompile "org.grails.plugins:geb"
-    testCompile "org.seleniumhq.selenium:selenium-remote-driver:3.14.0"
-    testCompile "org.seleniumhq.selenium:selenium-api:3.14.0"
-    testCompile "org.seleniumhq.selenium:selenium-support:3.14.0"
-    testRuntime "org.seleniumhq.selenium:selenium-chrome-driver:3.14.0"
-    testRuntime "org.seleniumhq.selenium:selenium-firefox-driver:3.14.0"
-    compile 'org.grails.plugins:spring-security-ui:4.0.0.M1'
-    compile 'org.grails.plugins:spring-security-core:4.0.0.RC2'
-    runtime 'mysql:mysql-connector-java:8.0.17'
-    compile ('org.apache.poi:poi:4.1.0') {
+    runtimeOnly "org.glassfish.web:el-impl:2.2.1-b05"
+    runtimeOnly "com.h2database:h2"
+    runtimeOnly "org.apache.tomcat:tomcat-jdbc"
+    runtimeOnly "javax.xml.bind:jaxb-api:2.3.1"
+    runtimeOnly "com.bertramlabs.plugins:asset-pipeline-grails:3.4.7"
+    testImplementation "io.micronaut:micronaut-inject-groovy"
+    testImplementation "org.grails:grails-gorm-testing-support"
+    testImplementation "org.mockito:mockito-core"
+    testImplementation "org.grails:grails-web-testing-support"
+    testImplementation "org.grails.plugins:geb"
+    testImplementation "org.seleniumhq.selenium:selenium-remote-driver:4.0.0"
+    testImplementation "org.seleniumhq.selenium:selenium-api:4.0.0"
+    testImplementation "org.seleniumhq.selenium:selenium-support:4.0.0"
+    testRuntimeOnly "org.seleniumhq.selenium:selenium-chrome-driver:4.0.0"
+    testRuntimeOnly "org.seleniumhq.selenium:selenium-firefox-driver:4.0.0"
+    implementation 'org.grails.plugins:spring-security-ui:4.0.0-RC1'
+    implementation 'org.grails.plugins:spring-security-core:5.1.1'
+    implementation 'org.mariadb.jdbc:mariadb-java-client:3.1.0'
+
+    implementation ('org.apache.poi:poi:3.17') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile ('org.apache.poi:poi-ooxml:4.1.0') {
+
+    implementation 'jakarta.xml.bind:jakarta.xml.bind-api:4.0.0'
+    implementation 'org.glassfish.jaxb:jaxb-runtime:4.0.0'
+    implementation 'jakarta.activation:jakarta.activation-api:2.1.0'
+
+    implementation ('org.apache.poi:poi-ooxml:3.17') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile 'org.apache.poi:poi-ooxml-schemas:4.1.0'
-    compile 'org.grails.plugins:excel-import:3.0.2', {  exclude  module: 'poi-ooxml'
+    implementation 'org.apache.poi:poi-ooxml-schemas:3.17'
+    implementation 'org.grails.plugins:excel-import:3.0.2', {  exclude  module: 'poi-ooxml'
         exclude  module: 'poi'
         exclude  module: 'ooxml-schemas'
     }
-    compile "org.grails.plugins:excel-export:2.1", {  exclude  module: 'poi-ooxml'
+    implementation "org.grails.plugins:excel-export:2.1", {
+        exclude  module: 'poi-ooxml'
         exclude  module: 'poi'
         exclude  module: 'ooxml-schemas'
     }
-//    compile 'org.grails.plugins:database-migration:3.1.0.RC1'
-//    compile 'org.liquibase:liquibase-core:3.8.0'
-    compile 'org.grails.plugins:grails-melody-plugin:1.80.0'
-    compile ('org.docx4j:docx4j-core:11.1.3') {
+    implementation ('org.grails.plugins:database-migration:4.1.0') {
+        exclude module: 'liquibase-core'
+    }
+    implementation 'org.liquibase:liquibase-core:4.18.0'
+//    compile 'org.grails.plugins:grails-melody-plugin:1.80.0'
+    implementation ('org.docx4j:docx4j-core:11.4.8') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile ('org.docx4j:docx4j-JAXB-ReferenceImpl:11.1.3') {
+    implementation ('org.docx4j:docx4j-JAXB-ReferenceImpl:11.4.8') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile ('org.docx4j:docx4j-ImportXHTML:8.0.0') {
+    implementation ('org.docx4j:docx4j-ImportXHTML:11.4.8') {
         exclude group: 'org.slf4j', module: 'slf4j-log4j12'
         exclude group: 'log4j', module: 'log4j'
     }
-    compile('javax.xml.bind:jaxb-api:2.3.0') {
-        exclude group: 'org.slf4j', module: 'slf4j-log4j12'
-        exclude group: 'log4j', module: 'log4j'
-    }
+
 }
 
 bootRun {
+    ignoreExitValue true
     jvmArgs(
         '-Dspring.output.ansi.enabled=always', 
         '-noverify', 
         '-XX:TieredStopAtLevel=1',
         '-Xmx1024m')
-    jvmArgs(jvmOpenModulesArgs)
     sourceResources sourceSets.main
     String springProfilesActive = 'spring.profiles.active'
     systemProperty springProfilesActive, System.getProperty(springProfilesActive)
 }
 
+tasks.withType(Test) {
+    useJUnitPlatform()
+}
+
+tasks.withType(GroovyCompile) {
+    configure(groovyOptions) {
+        forkOptions.jvmArgs = ['-Xmx1024m']
+    }
+}
+
+tasks.withType(Test) {
+    useJUnitPlatform()
+}
+
 webdriverBinaries {
-    chromedriver '2.45.0'
-    geckodriver '0.24.0'
+    if (!System.getenv().containsKey('GITHUB_ACTIONS')) {
+        chromedriver {
+            version = '2.45.0'
+            fallbackTo32Bit = true
+        }
+        geckodriver '0.30.0'
+    }
 }
 
 tasks.withType(Test) {
     systemProperty "geb.env", System.getProperty('geb.env')
     systemProperty "geb.build.reportsDir", reporting.file("geb/integrationTest")
-    systemProperty "webdriver.chrome.driver", System.getProperty('webdriver.chrome.driver')
-    systemProperty "webdriver.gecko.driver", System.getProperty('webdriver.gecko.driver')
-    jvmArgs = jvmOpenModulesArgs
-}
-
-tasks.withType(GroovyCompile) {
-    configure(groovyOptions.forkOptions) {
-        memoryMaximumSize = '4g'
-        jvmArgs = ['-Xms2g', '-Xmx4g']
+    if (!System.getenv().containsKey('GITHUB_ACTIONS')) {
+        systemProperty 'webdriver.chrome.driver', System.getProperty('webdriver.chrome.driver')
+        systemProperty 'webdriver.gecko.driver', System.getProperty('webdriver.gecko.driver')
+    } else {
+        systemProperty 'webdriver.chrome.driver', "${System.getenv('CHROMEWEBDRIVER')}/chromedriver"
+        systemProperty 'webdriver.gecko.driver', "${System.getenv('GECKOWEBDRIVER')}/geckodriver"
     }
-    options.forkOptions.jvmArgs = jvmOpenModulesArgs
 }
 
 tasks.withType(War) {
@@ -239,12 +204,4 @@ assets {
             targetLanguage: 'ES6', //Can go from ES6 to ES5 for those bleeding edgers
             optimizationLevel: 'WHITESPACE_ONLY' //Or ADVANCED or WHITESPACE_ONLY
     ]
-}
-
-sourceSets {
-    main {
-        resources {
-            srcDir 'grails-app/migrations'
-        }
-    }
 }
